--- a/property2.html
+++ b/property2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family and pet friendly home!</title>
+    <title>Charm & Style in Downtown Little Rock</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -128,7 +128,7 @@
 </header>
 <div class="container">
     <section>
-        <div class="title">Family and pet friendly home!</div>
+        <div class="title">Charm & Style in Downtown Little Rock</div>
         <div class="image-slider">
             <div class="image-container">
                 <img src="PropertyPics/Ruthhouse2-1.webp" alt="Slide 1" class="slide-image">
@@ -158,8 +158,8 @@
                 <h2>Booking</h2>
                 <p>Reserve your stay now!</p>
                 <div class="booking-buttons">
-                    <a href="https://www.airbnb.com/rooms/859616286105603942?guests=1&adults=1&s=67&unique_share_id=64e34d22-7525-42d8-bc82-a5c4a87d84e1&source_impression_id=p3_1710787831_YrGcNJ%2BVqCdMiJur">AIRBNB</a>
-                    <a href="https://www.vrbo.com/3329870?rm1=a2&expediaPropertyId=92434826&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
+                    <a href="https://www.airbnb.com/rooms/29155700?guests=1&adults=1&s=67&unique_share_id=2161e731-80b3-4d37-b371-2f41840a1265&source_impression_id=p3_1710787833_vV16An%2Bp2VowFNQo">AIRBNB</a>
+                    <a href="https://www.vrbo.com/1418910?rm1=a2&expediaPropertyId=31052285&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
                 </div>
             </div>
         </div>
