--- a/property4.html
+++ b/property4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family and pet friendly home!</title>
+    <title>Fantastic house between Hillcrest and Downtown LR</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -128,7 +128,7 @@
 </header>
 <div class="container">
     <section>
-        <div class="title">Family and pet friendly home!</div>
+        <div class="title">Fantastic house between Hillcrest and Downtown LR</div>
         <div class="image-slider">
             <div class="image-container">
                 <img src="PropertyPics/Ruthhouse4-1.webp" alt="Slide 1" class="slide-image">
@@ -158,8 +158,8 @@
                 <h2>Booking</h2>
                 <p>Reserve your stay now!</p>
                 <div class="booking-buttons">
-                    <a href="https://www.airbnb.com/rooms/859616286105603942?guests=1&adults=1&s=67&unique_share_id=64e34d22-7525-42d8-bc82-a5c4a87d84e1&source_impression_id=p3_1710787831_YrGcNJ%2BVqCdMiJur">AIRBNB</a>
-                    <a href="https://www.vrbo.com/3329870?rm1=a2&expediaPropertyId=92434826&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
+                    <a href="https://www.airbnb.com/rooms/22142666?guests=1&adults=1&s=67&unique_share_id=0e246405-c68b-43b2-b547-b823a64b7ff6&source_impression_id=p3_1710787835_pF3WTGcDczeju%2FtB">AIRBNB</a>
+                    <a href="https://www.vrbo.com/4657269ha?rm1=a2&expediaPropertyId=30087542&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
                 </div>
             </div>
         </div>
