--- a/property6.html
+++ b/property6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family and pet friendly home!</title>
+    <title>Enjoy a monthly furnished apartment at Downtown LR</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -128,7 +128,7 @@
 </header>
 <div class="container">
     <section>
-        <div class="title">Family and pet friendly home!</div>
+        <div class="title">Enjoy a monthly furnished apartment at Downtown LR</div>
         <div class="image-slider">
             <div class="image-container">
                 <img src="PropertyPics/Ruthhouse6-1.webp" alt="Slide 1" class="slide-image">
@@ -158,8 +158,8 @@
                 <h2>Booking</h2>
                 <p>Reserve your stay now!</p>
                 <div class="booking-buttons">
-                    <a href="https://www.airbnb.com/rooms/859616286105603942?guests=1&adults=1&s=67&unique_share_id=64e34d22-7525-42d8-bc82-a5c4a87d84e1&source_impression_id=p3_1710787831_YrGcNJ%2BVqCdMiJur">AIRBNB</a>
-                    <a href="https://www.vrbo.com/3329870?rm1=a2&expediaPropertyId=92434826&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
+                    <a href="https://www.airbnb.com/rooms/44593642?guests=1&adults=1&s=67&unique_share_id=e583b12a-c4bc-48f3-8d1a-90455355ba3e&source_impression_id=p3_1710787838_dGZ7wVADPAYzAr%2Fc">AIRBNB</a>
+                    <a href="https://www.vrbo.com/2221943?rm1=a2&expediaPropertyId=65155789&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
                 </div>
             </div>
         </div>
