--- a/property1.html
+++ b/property1.html
@@ -144,15 +144,15 @@
         <div class="categories">
             <div class="category">
                 <h2>Near This Location</h2>
-                <p>Baseball fields nearby</p>
+                 <p class="review-link"><a href="https://www.milb.com/arkansas/tickets/single-game-tickets">Baseball</a> Fields Nearby</p>
                 <p>Local restaurants within walking distance</p>
-                <p>Museums for family outings</p>
+                 <p class="review-link"><a href="  https://museumofdiscovery.org/">Museams</a> For Family Outings</p>
             </div>
             <div class="category">
                 <h2>Amenities</h2>
                 <p>High-speed Wi-Fi</p>
-                <p>Netflix subscription included</p>
-                <p>2 cozy bedrooms</p>
+                <p>Netflix and Prime on the Smart TV</p>
+                <p>Full Kitchen and Dishwasher</p>
             </div>
             <div class="category">
                 <h2>Booking</h2>
