--- a/property1.html
+++ b/property1.html
@@ -146,7 +146,7 @@
                 <h2>Near This Location</h2>
                  <p class="review-link"><a href="https://www.milb.com/arkansas/tickets/single-game-tickets">Baseball</a> Fields Nearby</p>
                 <p>Local restaurants within walking distance</p>
-                 <p class="review-link"><a href="  https://museumofdiscovery.org/">Museams</a> For Family Outings</p>
+                 <p class="review-link"><a href="  https://museumofdiscovery.org/">Museums</a> For Family Outings</p>
             </div>
             <div class="category">
                 <h2>Amenities</h2>
