--- a/property2.html
+++ b/property2.html
@@ -141,18 +141,18 @@
         <div class="description">
             <p id="distanceDisplay">Calculating distance...</p>
         </div>
-        <div class="categories">
+       <div class="categories">
             <div class="category">
                 <h2>Near This Location</h2>
-                <p>Baseball fields nearby</p>
-                <p>Local restaurants within walking distance</p>
-                <p>Museums for family outings</p>
+                 <p class="review-link">Local <a href="https://www.facebook.com/thelroysterbar/"> Restaurants</a> Nearby</p>
+                <p class="review-link"> See The <a href="https://www.arkansas.com/little-rock/landmarks/arkansas-state-capitol"> Capitol</a></p>
+                 <p class="review-link"><a href="https://arkmfa.org/">Museums</a> For Family Outings</p>
             </div>
             <div class="category">
                 <h2>Amenities</h2>
                 <p>High-speed Wi-Fi</p>
-                <p>Netflix subscription included</p>
-                <p>2 cozy bedrooms</p>
+                <p>Netflix and Prime on the Smart TV</p>
+                <p>Full Kitchen and Dishwasher</p>
             </div>
             <div class="category">
                 <h2>Booking</h2>
