--- a/property2.html
+++ b/property2.html
@@ -151,7 +151,7 @@
             <div class="category">
                 <h2>Amenities</h2>
                 <p>High-speed Wi-Fi</p>
-                <p>Netflix and Prime on the Smart TV</p>
+                <p>Smart TV</p>
                 <p>Full Kitchen and Dishwasher</p>
             </div>
             <div class="category">
