--- a/LittleRockProperties1.html
+++ b/LittleRockProperties1.html
@@ -9,16 +9,33 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            /* Updated background with gradient */
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
             color: #333;
             min-height: 100vh;
             position: relative;
+        }
+        @keyframes gradientBG {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
         }
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
             box-sizing: border-box;
+            background-color: rgba(255, 255, 255, 0.8); /* Slightly transparent white */
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         header {
             height: 50px;
@@ -44,7 +61,7 @@
             color: #ddd;
         }
         section {
-            padding-top: 70px; /* Adjusted to ensure content is not hidden behind the fixed header */
+            padding-top: 70px;
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
@@ -64,9 +81,6 @@
             border-radius: 5px;
             margin-bottom: 10px;
         }
-        .property-info {
-            display: none;
-        }
         .page-links {
             text-align: center;
             margin-top: 20px;
@@ -76,7 +90,6 @@
             color: #333;
             text-decoration: none;
         }
-        /* Overlay styles */
         .overlay {
             display: none;
             position: fixed;
@@ -130,12 +143,11 @@
             <a href="LittleRockProperties3.html">3</a>
         </div>
     </div>
-    <!-- Overlays -->
-    <div id="property1-info" class="overlay" onclick="hideOverlay('property1-info')">
+     <div id="property1-info" class="overlay" onclick="hideOverlay('property1-info')">
         <div class="overlay-content">
             <h2>Property 1</h2>
             <p>Location: Downtown Little Rock</p>
-            <p>Price: $X</p>
+            <p>Price: $250 A Night</p>
             <p>More information about Property 1.</p>
             <a href="property1.html">See More</a>
         </div>
@@ -144,7 +156,7 @@
         <div class="overlay-content">
             <h2>Property 2</h2>
             <p>Location: Downtown Little Rock</p>
-            <p>Price: $Y</p>
+            <p>Price: $165 A Night</p>
             <p>More information about Property 2.</p>
             <a href="property2.html">See More</a>
         </div>
@@ -153,11 +165,10 @@
         <div class="overlay-content">
             <h2>Property 3</h2>
             <p>Location: Downtown Little Rock</p>
-            <p>Price: $Z</p>
+            <p>Price: $99 A Night</p>
             <p>More information about Property 3.</p>
             <a href="property3.html">See More</a>
         </div>
-    </div>
     <script>
         function showOverlay(id) {
             document.getElementById(id).style.display = 'flex';
@@ -165,7 +176,6 @@
         function hideOverlay(id) {
             document.getElementById(id).style.display = 'none';
         }
-        // Close overlay when clicking outside of it
         window.onclick = function(event) {
             if (event.target.classList.contains('overlay')) {
                 event.target.style.display = 'none';
