--- a/property3.html
+++ b/property3.html
@@ -144,9 +144,9 @@
         <div class="categories">
             <div class="category">
                 <h2>Near This Location</h2>
-                <p>Baseball fields nearby</p>
-                <p>Local restaurants within walking distance</p>
-                <p>Museums for family outings</p>
+                 <p class="review-link">Local <a href="https://www.whitewatertavern.com/"> Music</a> Nearby</p>
+                <p class="review-link"> See The <a href="https://www.littlerock.gov/residents/parks-and-recreation/park-facility-trail-information/riverfront/"> River</a></p>
+                 <p class="review-link"><a href="https://www.google.com/maps/place/7th+Street+Murals/@34.7449725,-92.300354,20z/data=!4m15!1m8!3m7!1s0x87d2bb53b581fe31:0xc0852f9d20d4076b!2sDennison+St,+Little+Rock,+AR!3b1!8m2!3d34.7447561!4d-92.298634!16s%2Fg%2F1tc_x3zc!3m5!1s0x87d2bbe44ebdd69b:0x6b34617f4866a18f!8m2!3d34.7450232!4d-92.3006231!16s%2Fg%2F11lxfvgw_s?entry=ttu">Explore</a> The Art of Little Rock</p>
             </div>
             <div class="category">
                 <h2>Amenities</h2>
