--- a/LittleRockProperties3.html
+++ b/LittleRockProperties3.html
@@ -9,16 +9,33 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            /* Gradient background applied here */
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
             color: #333;
             min-height: 100vh;
             position: relative;
+        }
+        @keyframes gradientBG {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
         }
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
             box-sizing: border-box;
+            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background for container */
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         header {
             height: 50px;
@@ -44,7 +61,7 @@
             color: #ddd;
         }
         section {
-            padding-top: 70px; /* Adjusted to ensure content is not hidden behind the fixed header */
+            padding-top: 70px;
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
@@ -63,9 +80,6 @@
             object-fit: cover;
             border-radius: 5px;
             margin-bottom: 10px;
-        }
-        .property-info {
-            display: none;
         }
         .page-links {
             text-align: center;
