--- a/property6.html
+++ b/property6.html
@@ -165,9 +165,9 @@
         <div class="categories">
             <div class="category">
                 <h2>Near This Location</h2>
-                 <p class="review-link"><a href="https://www.google.com/maps/place/Rose+Creek+Plaza/@34.746844,-92.2988344,3a,75y,90t/data=!3m8!1e2!3m6!1sAF1QipO3DeMmrPkEee6nAQtJRRPXc6BMtEPMCBELVUy0!2e10!3e12!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipO3DeMmrPkEee6nAQtJRRPXc6BMtEPMCBELVUy0%3Dw114-h86-k-no!7i4032!8i3024!4m24!1m16!4m15!1m6!1m2!1s0x87d2bb53b581fe31:0xc0852f9d20d4076b!2sDennison+St!2m2!1d-92.298634!2d34.7447561!1m6!1m2!1s0x87d2a134a11f569b:0x3405f5100df35b17!2sLittle+Rock,+Arkansas!2m2!1d-92.2880157!2d34.7444618!3e0!3m6!1s0x87d2bbe17c1e8f47:0xafe063771816c331!8m2!3d34.7467743!4d-92.2987972!10e5!16s%2Fg%2F11pq2v5sjs?entry=ttu">Explore</a>The Rose Creek Plaza</p>
-                 <p class="review-link"><a href="https://vinosbrewpub.com/">Restaurants</a> Nearby</p>
-                 <p class="review-link"><a href="https://littlerockhall.com/">Live Music</a></p>
+                 <p class="review-link"><a href="https://www.google.com/maps/place/Rose+Creek+Trailhead/@34.7453459,-92.3014049,16z/data=!4m14!1m7!3m6!1s0x87d2bb53ce927763:0x85d1727c439c5e27!2s2223+W+7th+St+a,+Little+Rock,+AR+72201!3b1!8m2!3d34.7446016!4d-92.2983747!3m5!1s0x87d2bbfa3e64a0af:0x264704a6fd5c0248!8m2!3d34.746794!4d-92.300933!16s%2Fg%2F11pq70p2wd?entry=ttu">Explore </a>The Rose Creek Trail</p>
+                 <p class="review-link"><a href="https://doeseatplacelr.com/">Restaurants</a> Nearby</p>
+                 <p class="review-link"><a href="https://www.restaurantlogin.com/ordering/restaurant/menu?restaurant_uid=8d033984-a819-4f75-acc1-61efbe7210b7">Beer!</a></p>
             </div>
             <div class="category">
                 <h2>Amenities</h2>
