--- a/property7.html
+++ b/property7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chic guest house with EV universal wall connector</title>
+    <title>Monthly furnished Apartment in Downtown LR!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -166,8 +166,8 @@
             <div class="category">
                 <h2>Near This Location</h2>
                  <p class="review-link"><a href="https://www.google.com/maps/place/Rose+Creek+Trailhead/@34.7453459,-92.3014049,16z/data=!4m14!1m7!3m6!1s0x87d2bb53ce927763:0x85d1727c439c5e27!2s2223+W+7th+St+a,+Little+Rock,+AR+72201!3b1!8m2!3d34.7446016!4d-92.2983747!3m5!1s0x87d2bbfa3e64a0af:0x264704a6fd5c0248!8m2!3d34.746794!4d-92.300933!16s%2Fg%2F11pq70p2wd?entry=ttu">Explore </a>The Rose Creek Trail</p>
-                 <p class="review-link"><a href="https://doeseatplacelr.com/">Restaurants</a> Nearby</p>
-                 <p class="review-link"><a href="https://www.restaurantlogin.com/ordering/restaurant/menu?restaurant_uid=8d033984-a819-4f75-acc1-61efbe7210b7">Beer!</a></p>
+                 <p class="review-link"><a href="https://samstap.com/">Restaurants</a> Nearby</p>
+                 <p class="review-link"><a href="http://www.beerknurd.com/locations/little-rock-flying-saucer">Beer!</a></p>
             </div>
             <div class="category">
                 <h2>Amenities</h2>
