--- a/LittleRockProperties3.html
+++ b/LittleRockProperties3.html
@@ -128,15 +128,6 @@
                 <p>Click for details</p>
             </div>
             <!-- Property 2 -->
-            <div class="property" onclick="showOverlay('property2-info')">
-                <img src="PropertyPics/DowntownLittleRockBNB8Landing.webp" alt="Property 2">
-                <p>Click for details</p>
-            </div>
-            <!-- Property 3 -->
-            <div class="property" onclick="showOverlay('property3-info')">
-                <img src="PropertyPics/DowntownLittleRockBNB9Landing.webp" alt="Property 3">
-                <p>Click for details</p>
-            </div>
         </section>
         <div class="page-links">
             <a href="LittleRockProperties1.html">1</a>
@@ -149,28 +140,12 @@
         <div class="overlay-content">
             <h2>Property 7</h2>
             <p>Location: Downtown Little Rock</p>
-            <p>Price: $X</p>
+            <p>Price: $455 a Week</p>
             <p>More information about Property 7.</p>
             <a href="property7.html">See More</a>
         </div>
     </div>
-    <div id="property2-info" class="overlay" onclick="hideOverlay('property2-info')">
-        <div class="overlay-content">
-            <h2>Property 8</h2>
-            <p>Location: Downtown Little Rock</p>
-            <p>Price: $Y</p>
-            <p>More information about Property 8.</p>
-            <a href="property8.html">See More</a>
-        </div>
-    </div>
-    <div id="property3-info" class="overlay" onclick="hideOverlay('property3-info')">
-        <div class="overlay-content">
-            <h2>Property 9</h2>
-            <p>Location: Downtown Little Rock</p>
-            <p>Price: $Z</p>
-            <p>More information about Property 9.</p>
-            <a href="property9.html">See More</a>
-        </div>
+    
     </div>
     <script>
         function showOverlay(id) {
