--- a/LittleRockProperties3.html
+++ b/LittleRockProperties3.html
@@ -140,9 +140,17 @@
         <div class="overlay-content">
             <h2>Property 7</h2>
             <p>Location: Downtown Little Rock</p>
-            <p>Price: $455 a Week</p>
             <p>More information about Property 7.</p>
             <a href="property7.html">See More</a>
+        </div>
+    </div>
+
+        <div id="property2-info" class="overlay" onclick="hideOverlay('property2-info')">
+        <div class="overlay-content">
+            <h2>Property 8</h2>
+            <p>Location: Downtown Little Rock</p>
+            <p>More information about Property 7.</p>
+            <a href="property8.html">See More</a>
         </div>
     </div>
     
